--- a/apps/calculator/package.json
+++ b/apps/calculator/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@recursion-ui/calculator",
   "private": true,
+  "description": "Calculator app",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts src"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "@recursive-ui/utils": "workspace:*",
+    "@recursive-ui/eslint-config": "workspace:*",
+    "eslint": "^9.18.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5",
-    "@recursive-ui/utils": "workspace:*"
+    "typescript-eslint": "^8.21.0",
+    "vite": "^6.0.5"
   }
 }
