--- a/apps/calculator/package.json
+++ b/apps/calculator/package.json
@@ -7,16 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint --ext .ts src"
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
     "@recursive-ui/utils": "workspace:*",
-    "@recursive-ui/eslint-config": "workspace:*",
-    "eslint": "^9.18.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.21.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "@recursive-ui/biome-config": "workspace:*"
   }
 }
