Add initial setup for React app with TypeScript and Vite; include configuration files and utility functions

--- a/apps/react/biome.json
+++ b/apps/react/biome.json
@@ -20,23 +20,16 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
-
 			"style": {
-				"noNonNullAssertion": "warn",
-				"useConst": "off"
-			},
-			"a11y": {
-				"useButtonType": "off"
+				"useConst": "off",
+				"noNonNullAssertion": "warn"
 			}
 		}
 	},
 	"javascript": {
 		"formatter": {
 			"quoteStyle": "double",
-			"bracketSpacing": false,
-			"semicolons": "always",
-			"trailingCommas": "all",
-			"lineWidth": 90
+			"bracketSpacing": false
 		}
 	}
 }
