--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,12 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "paths": {
-      "@utils/*": ["src/*"]
-    }
-  },
-  "exclude": ["**/node_modules", "dist"],
-  "include": ["src"]
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"outDir": "dist",
+		"rootDir": "src",
+		"paths": {
+			"@utils/*": ["src/*"]
+		},
+		"verbatimModuleSyntax": true
+	},
+	"exclude": ["**/node_modules", "dist"],
+	"include": ["src"]
 }
